--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Ionic App</title>
 
-  <base href="/lawair/">
+  <base href="/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.bd29808ad429cb64.js" type="module"></script><script src="polyfills.91aae63ddd436914.js" type="module"></script><script src="main.ee3aae52346c9472.js" type="module"></script></body>
+<script src="runtime.2c472e7c3a02b431.js" type="module"></script><script src="polyfills.91aae63ddd436914.js" type="module"></script><script src="main.ee3aae52346c9472.js" type="module"></script></body>
 
 </html>
